--- a/talks/hazelcast/index.html
+++ b/talks/hazelcast/index.html
@@ -53,7 +53,7 @@
 <div class="reveal">
 
     <div class="footer">
-        <small><a href="http://twitter.com/pivovarit">@pivovarit</a></small>
+        <small><a href="http://twitter.com/pivovarit">🇺🇦 @pivovarit</a></small>
     </div>
 
     <!-- Any section element inside of this container is displayed as a slide -->
@@ -556,9 +556,6 @@
             <small>source: Hazelcast</small>
         </section>
 
-
-
-
         <section>
              <pre><code data-trim="" style="font-size: 0.8em;line-height: 0.9; max-height: 90%">
                   private static Pipeline buildPipeline() {
@@ -572,6 +569,15 @@
                       return p;
                   }
             </code></pre>
+
+        </section>
+
+        <section>
+            <img src="img/jet_samples.png" width="40%"/><br>
+
+            <h4><a href="https://github.com/hazelcast/hazelcast-jet-demos">https://github.com/hazelcast/hazelcast-jet-demos</a></h4>
+
+
 
         </section>
 
