--- a/talks/index.html
+++ b/talks/index.html
@@ -48,7 +48,15 @@
     </tr>
 
     <tr>
-        <td>103.</td>
+        <td>105.</td>
+        <td data-location="50.048165,19.931766" data-place="ICE Cracow">DevoxxPL 2022</td>
+        <td><a href="https://devoxx.pl/">CompletableFuture and its Quirks</a></td>
+        <td>22.06.2022</td>
+        <td>Cracow/Poland</td>
+    </tr>
+
+    <tr>
+        <td>104.</td>
         <td data-location="" data-place="">Devoxx for Ukraine</td>
         <td><a href="https://devoxx.pl/devoxx-for-ukraine/">Hazelcast 5.1 – The Hitchhiker's Guide</a></td>
         <td>28.05.2022</td>
@@ -56,21 +64,28 @@
     </tr>
 
     <tr>
-        <td>102.</td>
+        <td>103.</td>
         <td data-location="50.088853, 19.984622" data-place="Multikino Cracow">Geecon 2022</td>
         <td><a href="https://2022.geecon.org">Hazelcast 5.1 – The Hitchhiker's Guide</a></td>
-        <td>11.05.2022</td>
+        <td>13.05.2022</td>
         <td>Cracow/Poland</td>
+    </tr>
+
+    <tr>
+        <td>102.</td>
+        <td>Javeloper 2022</td>
+        <td><a href="https://javeloper.pl">Hazelcast 5.1 – The Hitchhiker's Guide</a></td>
+        <td>12.05.2022</td>
+        <td>Online</td>
     </tr>
 
     <tr>
         <td>101.</td>
         <td data-location="50.088853, 19.984622" data-place="Multikino Cracow">Geecon 2022</td>
         <td><a href="https://2022.geecon.org">CompletableFuture and its Quirks</a></td>
-        <td>11.05.2022</td>
+        <td>12.05.2022</td>
         <td>Cracow/Poland</td>
     </tr>
-
 
     <tr>
         <td>100.</td>
