--- a/talks/index.html
+++ b/talks/index.html
@@ -42,9 +42,16 @@
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
 
+    <tr>
+        <td>107.</td>
+        <td data-location="" data-place="">Devoxx for Ukraine</td>
+        <td><a href="https://devoxx.pl/devoxx-for-ukraine/">Hazelcast 5.1 – The Hitchhiker's Guide</a></td>
+        <td>???</td>
+        <td>Cracow/Poland</td>
+    </tr>
 
     <tr>
-        <td>105.</td>
+        <td>106.</td>
         <td data-location="50.048165,19.931766" data-place="ICE Cracow">DevoxxPL 2022</td>
         <td><a href="https://devoxx.pl/">CompletableFuture and its Quirks</a></td>
         <td>22.06.2022</td>
@@ -52,14 +59,20 @@
     </tr>
 
     <tr>
-        <td>104.</td>
-        <td data-location="" data-place="">Devoxx for Ukraine</td>
-        <td><a href="https://devoxx.pl/devoxx-for-ukraine/">Hazelcast 5.1 – The Hitchhiker's Guide</a></td>
-        <td>28.05.2022</td>
-        <td>Cracow/Poland</td>
+        <td>105.</td>
+        <td data-location="41.881066190676684, -87.63519375025176" data-place="IBM Conference Center">ChicagoJUG</td>
+        <td><a href="https://cjug.org">Hazelcast 5.1 – The Hitchhiker's Guide</a></td>
+        <td>16.06.2022</td>
+        <td>Chicago/USA</td>
     </tr>
 
-
+    <tr>
+        <td>104.</td>
+        <td data-location="41.881066190676684, -87.63519375025176" data-place="IBM Conference Center">ChicagoJUG</td>
+        <td><a href="https://cjug.org">CompletableFuture and its Quirks</a></td>
+        <td>16.06.2022</td>
+        <td>Chicago/USA</td>
+    </tr>
 
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">PAST</td>
