Add Hazelcast talk @Devoxx

--- a/talks/index.html
+++ b/talks/index.html
@@ -43,10 +43,22 @@
     </tr>
 
     <tr>
-        <td>107.</td>
+        <td style="background: #ffffff" colspan="5" align="center">2022</td>
+    </tr>
+
+    <tr>
+        <td>108.</td>
         <td data-location="" data-place="">Devoxx for Ukraine</td>
         <td><a href="https://devoxx.pl/devoxx-for-ukraine/">Hazelcast 5.1 – The Hitchhiker's Guide</a></td>
         <td>???</td>
+        <td>Cracow/Poland</td>
+    </tr>
+
+    <tr>
+        <td>107.</td>
+        <td data-location="50.048165,19.931766" data-place="ICE Cracow">DevoxxPL 2022</td>
+        <td><a href="https://devoxx.pl/">Hazelcast 5.2 - What's Next?</a></td>
+        <td>22.06.2022</td>
         <td>Cracow/Poland</td>
     </tr>
 
