--- a/talks/hazelcast/index.html
+++ b/talks/hazelcast/index.html
@@ -72,6 +72,9 @@
 
         </section>
 
+        <section data-background-image="img/raffle.png">
+        </section>
+
         <section>
             <h1>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h1>
             <h2>Lead Architect @ <a href="http://hazelcast.com/">Hazelcast</a></h2>
