--- a/talks/hazelcast/index.html
+++ b/talks/hazelcast/index.html
@@ -72,8 +72,7 @@
 
         </section>
 
-        <section data-background-image="img/raffle.png">
-        </section>
+<!--        <section data-background-image="img/raffle.png"></section>-->
 
         <section>
             <h1>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h1>
