--- a/talks/index.html
+++ b/talks/index.html
@@ -55,10 +55,18 @@
     </tr>
 
     <tr>
+        <td>33.</td>
+        <td data-location="52.22493469540039, 20.96212373563191" data-place="Warsaw Expo XXI">Confitura 2022</td>
+        <td><a href="https://2022.confitura.pl/#home">Trzymaj Springa na Dystans!</a></td>
+        <td>25.06.2022</td>
+        <td>Warsaw/Poland</td>
+    </tr>
+
+    <tr>
         <td>107.</td>
         <td data-location="50.048165,19.931766" data-place="ICE Cracow">DevoxxPL 2022</td>
         <td><a href="https://devoxx.pl/">Hazelcast 5.2 - What's Next?</a></td>
-        <td>22.06.2022</td>
+        <td>24.06.2022</td>
         <td>Cracow/Poland</td>
     </tr>
 
@@ -68,6 +76,10 @@
         <td><a href="https://devoxx.pl/">CompletableFuture and its Quirks</a></td>
         <td>22.06.2022</td>
         <td>Cracow/Poland</td>
+    </tr>
+
+    <tr>
+        <td style="background: #ffffff" colspan="5" align="center">PAST</td>
     </tr>
 
     <tr>
@@ -84,10 +96,6 @@
         <td><a href="https://cjug.org">CompletableFuture and its Quirks</a></td>
         <td>16.06.2022</td>
         <td>Chicago/USA</td>
-    </tr>
-
-    <tr>
-        <td style="background: #ffffff" colspan="5" align="center">PAST</td>
     </tr>
 
     <tr>
