--- a/talks/index.html
+++ b/talks/index.html
@@ -47,7 +47,7 @@
     </tr>
 
     <tr>
-        <td>108.</td>
+        <td>110.</td>
         <td data-location="" data-place="">Devoxx for Ukraine</td>
         <td><a href="https://devoxx.pl/devoxx-for-ukraine/">Hazelcast 5.1 – The Hitchhiker's Guide</a></td>
         <td>???</td>
@@ -55,11 +55,23 @@
     </tr>
 
     <tr>
-        <td>33.</td>
+        <td>109.</td>
+        <td data-location="41.41032558018643, 2.2377067660085173" data-place="International Barcelona Convention Center">JBCNConf 2022</td>
+        <td><a href="http://www.jbcnconf.com/2022/">CompletableFuture and its Quirks</a></td>
+        <td>19.07.2022</td>
+        <td>Barcelona/Spain</td>
+    </tr>
+
+    <tr>
+        <td>108.</td>
         <td data-location="52.22493469540039, 20.96212373563191" data-place="Warsaw Expo XXI">Confitura 2022</td>
         <td><a href="https://2022.confitura.pl/#home">Trzymaj Springa na Dystans!</a></td>
         <td>25.06.2022</td>
         <td>Warsaw/Poland</td>
+    </tr>
+
+    <tr>
+        <td style="background: #ffffff" colspan="5" align="center">PAST</td>
     </tr>
 
     <tr>
@@ -76,10 +88,6 @@
         <td><a href="https://devoxx.pl/">CompletableFuture and its Quirks</a></td>
         <td>22.06.2022</td>
         <td>Cracow/Poland</td>
-    </tr>
-
-    <tr>
-        <td style="background: #ffffff" colspan="5" align="center">PAST</td>
     </tr>
 
     <tr>
