--- a/talks/fantastic-frameworks/index.html
+++ b/talks/fantastic-frameworks/index.html
@@ -689,6 +689,7 @@
 
         <section>
             <h2>Pragmatic Hexagonal/Clean Architecture</h2>
+            <img class="fragment" src="img/hexagonal.png" width="70%"/>
         </section>
 
         <section>
