--- a/talks/assertive-spring/index.html
+++ b/talks/assertive-spring/index.html
@@ -819,7 +819,7 @@
         </section>
 
         <section>
-            <h2>Axon RabbitMQ/Kafka Story</h2>
+            <h2>Real Life Example (Axon and Kafka)</h2>
         </section>
 
         <section>
