--- a/talks/assertive-spring/index.html
+++ b/talks/assertive-spring/index.html
@@ -122,7 +122,6 @@
             <h2 class="fragment">Take time to learn and outdate quickly</h2>
             <h2 class="fragment">Go out of fashion/get abandoned</h2>
             <h2 class="fragment">Increase complexity/weight</h2>
-            <h2 class="fragment">Force you to keep up</h2>
             <h2 class="fragment">Require expert help</h2>
             <h2 class="fragment">Own you</h2>
         </section>
@@ -496,7 +495,7 @@
                 import javax.persistence.Entity;
 
                 @Entity
-                public class PersistedUser {
+                public class User {
 
                     private Long id;
 
