--- a/talks/index.html
+++ b/talks/index.html
@@ -47,7 +47,7 @@
     </tr>
 
     <tr>
-        <td>110.</td>
+        <td>111.</td>
         <td data-location="" data-place="">Devoxx for Ukraine</td>
         <td><a href="https://devoxx.pl/devoxx-for-ukraine/">Hazelcast 5.1 – The Hitchhiker's Guide</a></td>
         <td>???</td>
@@ -55,11 +55,19 @@
     </tr>
 
     <tr>
-        <td>109.</td>
+        <td>110.</td>
         <td data-location="41.41032558018643, 2.2377067660085173" data-place="International Barcelona Convention Center">JBCNConf 2022</td>
         <td><a href="http://www.jbcnconf.com/2022/">CompletableFuture and its Quirks</a></td>
         <td>19.07.2022</td>
         <td>Barcelona/Spain</td>
+    </tr>
+
+    <tr>
+        <td>109.</td>
+        <td data-location="54.40513371189296, 18.578249197739353" data-place="Inkubator STARTER">TricityJUG</td>
+        <td><a href="https://www.meetup.com/trojmiasto-java-user-group/events/287056610/">Hazelcast 5.1 – The Hitchhiker's Guide</a></td>
+        <td>14.07.2022</td>
+        <td>Gdańsk/Poland</td>
     </tr>
 
     <tr>
