--- a/talks/index.html
+++ b/talks/index.html
@@ -48,10 +48,10 @@
 
     <tr>
         <td>111.</td>
-        <td data-location="" data-place="">Devoxx for Ukraine</td>
-        <td><a href="https://devoxx.pl/devoxx-for-ukraine/">Hazelcast 5.1 – The Hitchhiker's Guide</a></td>
-        <td>???</td>
-        <td>Cracow/Poland</td>
+        <td data-location="41.10822749515926, 29.016460108128253" data-place="ING Türkiye">JUG Istanbul</td>
+        <td><a href="https://www.linkedin.com/posts/altuga_activity-6971070599540428800-rnPJ">CompletableFuture and its Quirks/The Future of Hazelcast</a></td>
+        <td>18.10.2022</td>
+        <td>Istanbul/Turkey</td>
     </tr>
 
     <tr>
