--- a/talks/index.html
+++ b/talks/index.html
@@ -47,11 +47,19 @@
     </tr>
 
     <tr>
-        <td>111.</td>
+        <td>112.</td>
         <td data-location="41.10822749515926, 29.016460108128253" data-place="ING Türkiye">JUG Istanbul</td>
         <td><a href="https://www.linkedin.com/posts/altuga_activity-6971070599540428800-rnPJ">CompletableFuture and its Quirks/The Future of Hazelcast</a></td>
         <td>18.10.2022</td>
         <td>Istanbul/Turkey</td>
+    </tr>
+        
+    <tr>
+        <td>111.</td>
+        <td data-location="41.40340897796727, 2.1894392443785713" data-place="Dynatrace">JUG Istanbul</td>
+        <td><a href="https://www.barcelonajug.org">CompletableFuture and its Quirks/The Future of Hazelcast</a></td>
+        <td>10.10.2022</td>
+        <td>Barcelona/Spain</td>
     </tr>
 
     <tr>
