--- a/talks/index.html
+++ b/talks/index.html
@@ -56,7 +56,7 @@
         
     <tr>
         <td>111.</td>
-        <td data-location="41.40340897796727, 2.1894392443785713" data-place="Dynatrace">JUG Istanbul</td>
+        <td data-location="41.40340897796727, 2.1894392443785713" data-place="Dynatrace">Barcelona JUG</td>
         <td><a href="https://www.barcelonajug.org">CompletableFuture and its Quirks/The Future of Hazelcast</a></td>
         <td>10.10.2022</td>
         <td>Barcelona/Spain</td>
