--- a/talks/index.html
+++ b/talks/index.html
@@ -65,8 +65,8 @@
     <tr>
         <td>113.</td>
         <td>Javeloper 2022</td>
-        <td><a href="https://javeloper.pl">he Future of Hazelcast</a></td>
-        <td>29.009.2022</td>
+        <td><a href="https://javeloper.pl">The Future of Hazelcast</a></td>
+        <td>29.09.2022</td>
         <td>Online</td>
     </tr>
         
