--- a/talks/index.html
+++ b/talks/index.html
@@ -78,17 +78,17 @@
         <td>28.09.2022</td>
         <td>Warsaw/Poland</td>
     </tr>
+
+    <tr>
+        <td style="background: #ffffff" colspan="5" align="center">PAST</td>
+    </tr>
         
     <tr>
         <td>111.</td>
         <td data-location="51.1043131772483, 17.029854451107067" data-place="Pub Wędrówki">WrocławJUG</td>
-        <td><a href="https://www.meetup.com/wroclawjug/events/288250106">The Future of Hazelcast</a></td>
+        <td><a href="https://www.meetup.com/wroclawjug/events/288250106">Hazelcast: The Journey from a Cache to Cloud-Native</a></td>
         <td>13.09.2022</td>
         <td>Wrocław/Poland</td>
-    </tr>
-
-    <tr>
-        <td style="background: #ffffff" colspan="5" align="center">PAST</td>
     </tr>
 
     <tr>
