--- a/talks/hazelcast-future/index.html
+++ b/talks/hazelcast-future/index.html
@@ -158,6 +158,26 @@
         </section>
 
         <section>
+            <h3>Cloud/Containers/Kubernetes changed the rules of the game</h3>
+            <li class="fragment">inconvenient file-based configuration</li>
+            <li class="fragment">inconvenient custom JAR upload</li>
+            <li class="fragment">complex autoscaling</li>
+            <li class="fragment">unreasonable resource allocation (< 1 CPU)</li>
+        </section>
+
+        <section>
+            <h3>Config as environment variables</h3>
+            <img src="img/envvars.png" width="60%"/><br>
+        </section>
+
+        <section>
+            <h2>Polyglot-first</h2>
+            <li class="fragment">Zero-config Serialization (Compact Serialization)</li>
+            <li class="fragment">SQL Engine(with Streaming)</li>
+            <li class="fragment">Zero-Code Maploader</li>
+        </section>
+
+        <section>
             <video data-autoplay src="img/arch.mp4"></video>
             <br>
             <small>source: Hazelcast</small>
@@ -179,26 +199,7 @@
             <li class="fragment">Beta Available!</li>
         </section>
 
-        <section>
-            <h3>Cloud/Containers/Kubernetes changed the rules of the game</h3>
-            <li class="fragment">inconvenient file-based configuration</li>
-            <li class="fragment">inconvenient custom JAR upload</li>
-            <li class="fragment">complex autoscaling</li>
-        </section>
 
-        <section>
-            <h3>Config as environment variables</h3>
-
-            <img src="img/envvars.png" width="60%"/><br>
-
-        </section>
-
-        <section>
-            <h2>Polyglot-first</h2>
-            <li class="fragment">Zero-config Serialization (Compact Serialization)</li>
-            <li class="fragment">SQL Engine(with Streaming)</li>
-            <li class="fragment">Zero-Code Maploader</li>
-        </section>
 
         <section>
             <img src="img/sql-example.png" width="90%"/><br>
