--- a/talks/hazelcast-future/index.html
+++ b/talks/hazelcast-future/index.html
@@ -163,6 +163,7 @@
             <li class="fragment">inconvenient custom JAR upload</li>
             <li class="fragment">complex autoscaling</li>
             <li class="fragment">unreasonable resource allocation (< 1 CPU)</li>
+            <li class="fragment">Java not the main choice</li>
         </section>
 
         <section>
@@ -178,58 +179,7 @@
         </section>
 
         <section>
-            <video data-autoplay src="img/arch.mp4"></video>
-            <br>
-            <small>source: Hazelcast</small>
-        </section>
-
-        <section>
-            <h3>Hazelcast Viridian</h3>
-
-            <img src="img/viridian.svg" width="60%"/><br>
-
-            <br>
-            <h4><a href="https://viridian.hazelcast.com/">https://viridian.hazelcast.com</a></h4>
-        </section>
-
-        <section>
-            <h2>Hazelcast Viridian</h2>
-            <li class="fragment">Opinionated</li>
-            <li class="fragment">Developer Experience</li>
-            <li class="fragment">Beta Available!</li>
-        </section>
-
-
-
-        <section>
             <img src="img/sql-example.png" width="90%"/><br>
-
-        </section>
-
-        <section>
-            <h2>IMap Change-Data-Capture</h2>
-        </section>
-
-        <section>
-            <h2>Hazelcast Viridian</h2>
-            <li class="fragment">Opinionated</li>
-            <li class="fragment">Developer Experience</li>
-            <li class="fragment">Beta Available!</li>
-        </section>
-
-        <section>
-            <img src="img/jet_samples.png" width="40%"/><br>
-
-            <h4><a href="https://github.com/hazelcast/hazelcast-jet-demos">https://github.com/hazelcast/hazelcast-jet-demos</a></h4>
-        </section>
-
-        <section>
-            <h3>Hazelcast Jet Design Documents</h3>
-            <h4><a href="https://jet-start.sh/docs/design-docs/">https://jet-start.sh/docs/design-docs/</a></h4>
-
-            <h3>Hazelcast Jet Architecture</h3>
-            <h4><a href="https://jet-start.sh/docs/architecture/distributed-computing">https://jet-start.sh/docs/architecture/distributed-computing</a>
-            </h4>
         </section>
 
         <section>
@@ -242,7 +192,54 @@
         </section>
 
         <section>
-            <h2>Next Generation</h2>
+            <h3>Hazelcast Jet Design Documents</h3>
+            <h4><a href="https://jet-start.sh/docs/design-docs/">https://jet-start.sh/docs/design-docs/</a></h4>
+
+            <h3>Hazelcast Jet Architecture</h3>
+            <h4><a href="https://jet-start.sh/docs/architecture/distributed-computing">https://jet-start.sh/docs/architecture/distributed-computing</a>
+            </h4>
+        </section>
+
+        <section>
+            <h2>Real-time Streaming Ideas</h2>
+
+            <img src="img/jet_samples.png" width="40%"/><br>
+
+            <h4><a href="https://github.com/hazelcast/hazelcast-jet-demos">https://github.com/hazelcast/hazelcast-jet-demos</a></h4>
+        </section>
+
+        <section>
+            <video data-autoplay src="img/arch.mp4"></video>
+            <br>
+            <small>source: Hazelcast</small>
+        </section>
+
+        <section>
+            <h3>Hazelcast Viridian</h3>
+
+            <img src="img/viridian.svg" width="40%"/><br>
+
+            <br>
+            <h4><a href="https://viridian.hazelcast.com/">https://viridian.hazelcast.com</a></h4>
+        </section>
+
+        <section>
+            <h2>Hazelcast Viridian</h2>
+            <li class="fragment">Opinionated</li>
+            <li class="fragment">Developer Experience</li>
+            <li class="fragment">Beta Available!</li>
+        </section>
+
+        <section>
+            <h2>IMap Change-Data-Capture</h2>
+        </section>
+
+        <section>
+            <h2>Tiered Storage</h2>
+        </section>
+
+        <section>
+            <h2>Next Generation (bleeding-edge)</h2>
             <li class="fragment">SEDA -> Thread-per-Core</li>
             <li class="fragment">Storage-first</li>
             <li class="fragment">Schema-first</li>
