--- a/talks/hazelcast-future/index.html
+++ b/talks/hazelcast-future/index.html
@@ -58,8 +58,12 @@
 
     <div class="slides">
 
+        <section data-background-image="img/javeloper.jpg">
+
+        </section>
+
         <section>
-            <h1>The Future of Hazelcast</h1>
+            <h1>Hazelcast: The Journey from Cache to Cloud-native</h1>
             <br>
             <br>
             <br>
