--- a/talks/index.html
+++ b/talks/index.html
@@ -61,6 +61,18 @@
         <td>10.10.2022</td>
         <td>Barcelona/Spain</td>
     </tr>
+
+    <tr>
+        <td>75.</td>
+        <td data-location="50.012639, 19.924074" data-place="Hotel Metropolo">JDD 2022</td>
+        <td><a href="https://jdd.org.pl">CompletableFuture and its Quirks</a></td>
+        <td>4.10.2022</td>
+        <td>Cracow/Poland</td>
+    </tr>
+
+    <tr>
+        <td style="background: #ffffff" colspan="5" align="center">PAST</td>
+    </tr>
         
     <tr>
         <td>113.</td>
@@ -79,9 +91,6 @@
         <td>Warsaw/Poland</td>
     </tr>
 
-    <tr>
-        <td style="background: #ffffff" colspan="5" align="center">PAST</td>
-    </tr>
         
     <tr>
         <td>111.</td>
