--- a/talks/index.html
+++ b/talks/index.html
@@ -46,6 +46,36 @@
         <td style="background: #ffffff" colspan="5" align="center">2022</td>
     </tr>
 
+
+
+    <tr>
+        <td>119.</td>
+        <td data-location="50.03700544883105, 22.004168519004615" data-place="Lord Jack">RzeszówJUG</td>
+        <td><a href="https://www.meetup.com/Rzeszow-Java-User-Group/">CompletableFuture and its Quirks</a></td>
+        <td>26.10.2022</td>
+        <td>Rzeszów/Poland</td>
+    </tr>
+
+    <tr>
+        <td>118.</td>
+        <td data-location="50.108958, 14.585599" data-place="CineStar Prague">GeeCON Prague 2022</td>
+        <td><a href="https://2022.geecon.cz">The Future of Hazelcast</a></td>
+        <td>24.10.2022</td>
+        <td>Prague/Czech Republic</td>
+    </tr>
+
+    <tr>
+        <td>117.</td>
+        <td data-location="50.108958, 14.585599" data-place="CineStar Prague">GeeCON Prague 2022</td>
+        <td><a href="https://2022.geecon.cz">CompletableFuture and its Quirks</a></td>
+        <td>24.10.2022</td>
+        <td>Prague/Czech Republic</td>
+    </tr>
+
+    <tr>
+        <td style="background: #ffffff" colspan="5" align="center">PAST</td>
+    </tr>
+
     <tr>
         <td>116.</td>
         <td data-location="41.10822749515926, 29.016460108128253" data-place="ING Türkiye">JUG Istanbul</td>
@@ -54,10 +84,6 @@
         <td>Istanbul/Turkey</td>
     </tr>
 
-    <tr>
-        <td style="background: #ffffff" colspan="5" align="center">PAST</td>
-    </tr>
-        
     <tr>
         <td>115.</td>
         <td data-location="41.40340897796727, 2.1894392443785713" data-place="Dynatrace">Barcelona JUG</td>
