--- a/talks/completable-future-quirks/index.html
+++ b/talks/completable-future-quirks/index.html
@@ -60,6 +60,10 @@
 
     <div class="slides">
 
+        <section data-background-image="img/geecon.png"></section>
+
+        <section data-background-image="img/geecon_slido.png"></section>
+
         <section>
             <h1>CompletableFuture</h1>
             <h3>and its quirks</h3>
