--- a/talks/hazelcast-future/index.html
+++ b/talks/hazelcast-future/index.html
@@ -59,7 +59,7 @@
     <div class="slides">
 
         <section>
-            <h1>Hazelcast: The Journey from Cache to Cloud-native</h1>
+            <h1>Hazelcast: The Future</h1>
             <br>
             <br>
             <br>
@@ -70,7 +70,9 @@
 
         </section>
 
-<!--        <section data-background-image="img/raffle.png"></section>-->
+        <section data-background-image="img/geecon.png"></section>
+
+        <section data-background-image="img/geecon_slido.png"></section>
 
         <section>
             <h1>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h1>
