--- a/talks/completable-future-quirks/index.html
+++ b/talks/completable-future-quirks/index.html
@@ -69,13 +69,11 @@
             <h2><a href="http://pivovarit.github.io"> Grzegorz Piwowarek</a></h2>
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
             <br>
-            <img src="img/hz.png" width="20%"/><br>
-
         </section>
 
         <section>
             <h1>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h1>
-            <h2>Lead Architect @ <a href="http://hazelcast.com/">Hazelcast</a></h2>
+            <h2>Principal Engineer @ <a href="https://miim.ai">Mi|iM</a></h2>
             <h2>Trainer @ <a href="https://bottega.com.pl">Bottega IT Minds</a></h2>
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
             <br>
@@ -484,8 +482,6 @@
             <img width="15%" src="img/qr.png"/>
             <h3><a href="http://twitter.com/pivovarit">Twitter: @pivovarit</a></h3>
             <br>
-            <img src="img/hz.png" width="30%"/><br>
-
         </section>
     </div>
 </div>
