--- a/talks/index.html
+++ b/talks/index.html
@@ -51,6 +51,14 @@
     </tr>
 
     <tr>
+        <td>120.</td>
+        <td data-location="50.06463451523371, 19.949919178463688" data-place="Browar Lubicz">J-Santa on Tour</td>
+        <td><a href="https://evenea.pl/pl/wydarzenie/jsanta22krakow">CompletableFuture and its Quirks</a></td>
+        <td>7.12.2022</td>
+        <td>Cracow/Poland</td>
+    </tr>
+
+    <tr>
         <td>119.</td>
         <td data-location="50.03700544883105, 22.004168519004615" data-place="Lord Jack">RzeszówJUG</td>
         <td><a href="https://www.meetup.com/Rzeszow-Java-User-Group/">CompletableFuture and its Quirks</a></td>
