--- a/talks/index.html
+++ b/talks/index.html
@@ -42,12 +42,26 @@
         <td style="background: #ffffff" colspan="5" align="center">UPCOMING</td>
     </tr>
 
-    <tr>
-        <td style="background: #ffffff" colspan="5" align="center">2022</td>
-    </tr>
+
 
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">PAST</td>
+    </tr>
+
+    <tr>
+        <td style="background: #ffffff" colspan="5" align="center">2023</td>
+    </tr>
+
+    <tr>
+        <td>121.</td>
+        <td data-location="52.40746430234642, 16.911205324043184" data-place="Concordia Design">Code Talks</td>
+        <td><a href="https://www.psi.pl/pl/kariera/code-talks/">CompletableFuture and its Quirks</a></td>
+        <td>10.01.2023</td>
+        <td>Poznań/Poland</td>
+    </tr>
+
+    <tr>
+        <td style="background: #ffffff" colspan="5" align="center">2022</td>
     </tr>
 
     <tr>
